--- a/article/dc/akam010.html
+++ b/article/dc/akam010.html
@@ -44,7 +44,7 @@
                          <p><br/>/<br /></p>
                          <br/>
                          <p>赤井秀一睜開眼，早晨的陽光從薄薄的白紗窗簾縫撒進來有些刺眼。他翻身就見身旁依舊熟睡的金髮天使，他帶著笑意輕柔地在散亂的瀏海上印下一吻。</p>
-                         <p>起身的動作有點吃力，他活動了一下年輕時過度使用的關節，坐在床沿發愣了一會。降谷被赤井的動作打擾，皺著眉頭輕哼幾聲後翻了個身背對赤</p>
+                         <p>起身的動作有點吃力，他活動了一下年輕時過度使用的關節，坐在床沿發愣了一會。降谷被赤井的動作打擾，皺著眉頭輕哼幾聲後翻了個身背對赤井。笑意攀上赤井的嘴角。果然一切都依然和從前一模一樣啊。</p>
                          <p>放輕身段起身後，赤井熟練地打理起家務。就像一個盡職的農人，得在旭日升起前做完應盡的農活。<br/>把前一天換下來的髒衣服扔進洗衣機裡，再到陽台給雛菊澆水，天氣很好，這一兩天他倆的關節應該都不會那麼難受。<br/>他再到門口把信箱裡的郵件拿回來，廣告郵件丟入回收桶、舊友寄來的明信片看了看便收進抽屜裡，工藤到倫敦旅遊的明信片則擱在桌上，晚點要拿給降谷看。</p>
                          <p>左下角的視線有一塊盲區，但在熟悉的家裡完全不構成影響。那來自一場使他退下已經比別人長上許多的狙擊手生涯的任務，他並沒有感到特別惋惜，職業生涯裡他付出的已經夠多了。離開前線後不久便也隨著降谷一起退休，將時間留下來陪伴彼此。</p>
                          <p>把吐司丟進烤箱，把牛奶放進微波爐後，赤井踩著步伐回到臥室，準備喚醒那位還躲在夢鄉裡的天使。</p>
@@ -59,7 +59,12 @@
                          <br />
                          <p>Fin.</p>
                          <p>2019.10.17.&nbsp;&nbsp;墨兒&infin;</p>
-                         <br/><p>-</p><br />
+                         <br/><p>/</p><br />
+
+                         <p><font size="2" color="#999999"><strong>其實這裡的安排，降谷並不是完全的失憶或失智症，只是每天早上起來的時候會把近期的一些記憶刷白，赤井透過告訴他彼此之間的關係、帶他看相簿等等來幫他重新想起，狀況好的話降谷很快可以找回那些記憶，然後和赤井度過老夫老妻的幸福的一天。這個設定有稍微參考《擁有未來記憶的女孩》，不過降谷沒有未來記憶，只是把過去忘了些。</strong></font></p>
+                         <p><font size="2" color="#999999"><strong>最後一句話，一開始其實是寫「我叫赤井秀一，是你的戀人。」對於降谷的狀況，要幫助激活記憶應該是要表明身分最為迅速，所以一開始很順地這樣寫了。不過最後一次修稿時候還是把它改掉了。這一天裡降谷能不能想起全部的過去也不那麼重要、是戀人還是丈夫還是其實從沒說清楚關係也不那麼重要，而且，最美的告白才能配上最美的初醒零君。</strong></font></p>
+
+                         <br /><p>－</p><br />
 
                          <p><a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/nj64oe">噗浪</a></p>
 
