--- a/article/dc/akam010.html
+++ b/article/dc/akam010.html
@@ -69,7 +69,7 @@
                          <p><a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/nj64oe">噗浪</a></p>
 
                          <br/>
-                         <a href="../../dc.html" class="btn btn-primary tm-md-align-center">Back to Contents</a>
+                         <a href="../../DC.html" class="btn btn-primary tm-md-align-center">Back to Contents</a>
                          <p>&nbsp;</p>
                      </div>
                  </div>
