--- a/DC.html
+++ b/DC.html
@@ -59,7 +59,7 @@
                          <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
 -->
                          <br/><br />
-                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
+                         <a href="#" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
                      </div>
                  </div>
