--- a/DC.html
+++ b/DC.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>LIGHT INK - DC</title>
+    <link rel="icon" href="./img/icon.ico" type="image/x-icon">
 
   <!-- load CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
@@ -41,7 +42,7 @@
                          <br/>
                          <h5 class="mb-4 tm-text-color-primary">AKAM 赤安</h5>
                          <p><a href="./article/dc/akam010.html">【極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
-                         <p><a href="#">【極短】上邪</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.9.2</font></p>
+                         <p><a href="./article/dc/akam009.html">【極短】上邪</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.9.2</font></p>
                          <p><a href="#">【短文】Teddy Bear</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.13</font></p>
                          <p><a href="#">【系列】身為優秀的下屬</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.10</font></p>
                          <p><a href="#">【極短】春日</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.4.3</font></p>
@@ -59,7 +60,7 @@
                          <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
 -->
                          <br/><br />
-                         <a href="#" class="btn btn-primary tm-md-align-center">Back to Home</a>
+                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
                      </div>
                  </div>
@@ -80,7 +81,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/11/14 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/11/15 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
