--- a/article/dc/akam010.html
+++ b/article/dc/akam010.html
@@ -67,7 +67,7 @@
 
                          <br /><p>－</p><br />
 
-                         <p><a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/nj64oe">噗浪</a></p>
+                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/nj64oe">噗浪</a></p>
 
                          <br/>
                          <a href="../../DC.html" class="btn btn-primary tm-md-align-center">Back to Contents</a>
@@ -88,7 +88,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/11/15 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/11/16 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
