--- a/article/dc/akam008.html
+++ b/article/dc/akam008.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>LIGHT INK - 上邪</title>
+  <title>LIGHT INK - Teddy Bear</title>
     <link rel="icon" href="../../img/icon.ico" type="image/x-icon">
 
   <!-- load CSS -->
