--- a/DC.html
+++ b/DC.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>LIGHT INK - DC</title>
+  <title>LIGHT INK - DC名偵探柯南</title>
     <link rel="icon" href="./img/icon.ico" type="image/x-icon">
 
   <!-- load CSS -->
@@ -44,17 +44,17 @@
                          <p><a href="./article/dc/akam010.html">【極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
                          <p><a href="./article/dc/akam009.html">【極短】上邪</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.9.2</font></p>
                          <p><a href="./article/dc/akam008.html">【短文】Teddy Bear</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.13</font></p>
-                         <p><a href="#">【系列】身為優秀的下屬</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.10</font></p>
-                         <p><a href="#">【極短】春日</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.4.3</font></p>
-                         <p><a href="#">【短文】身為共同友人：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.14</font></p>
-                         <p><a href="#">【短文】英雄之後：M22後記</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.28</font></p>
-                         <p><a href="#">【短文】特工遊樂園記：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.14</font></p>
-                         <p><a href="#">【極短】新年快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.12.31</font></p>
-                         <p><a href="#">【極短】男朋友</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.11.11</font></p>
+                         <p><a href="./article/dc/akam007.html">【系列】身為優秀的下屬</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.10</font></p>
+                         <p><a href="./article/dc/akam006.html">【極短】春日</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.4.3</font></p>
+                         <p><a href="./article/dc/akam005.html">【短文】身為共同友人：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.14</font></p>
+                         <p><a href="./article/dc/akam004.html">【短文】英雄之後：M22後記</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.28</font></p>
+                         <p><a href="./article/dc/akam003.html">【短文】特工遊樂園記：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.14</font></p>
+                         <p><a href="./article/dc/akam002.html">【極短】新年快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.12.31</font></p>
+                         <p><a href="./article/dc/akam001.html">【極短】男朋友</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.11.11</font></p>
 
                          <br />
                          <h5 class="mb-4 tm-text-color-primary">Furuya 降谷中心</h5>
-                         <p><a href="#">【短詩】原色</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.22</font></p>
+                         <p><a href="./article/dc/furuya001.html">【短詩】原色</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.22</font></p>
 
 <!-- 新增目錄備用
                          <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
@@ -81,7 +81,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/11/16 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/11/17 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
