--- a/DC.html
+++ b/DC.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
   <title>LIGHT INK - DC名偵探柯南</title>
     <link rel="icon" href="./img/icon.ico" type="image/x-icon">
 
@@ -60,7 +60,7 @@
                          <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
 -->
                          <br/><br />
-                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
+                         <a href="#" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
                      </div>
                  </div>
