--- a/article/dc/furuya001.html
+++ b/article/dc/furuya001.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,7 @@
                          <p><font size="2" color="#999999"><strong>衍生自M20純黑的惡夢關於「顏色」的想像，文前說含有M20劇透。</strong></font></p>
                          <p><br/>/<br /></p>
                          <br />
-                         <img src="./img/原色.png" alt="Image" class="img-fluid">
+                         <img src="./img/fu1.png" alt="Image" class="img-fluid">
                          <br/><br />
                          <p>庫拉索沒有顏色，所以可以被染成任何顏色，最終做出自己的選擇，把自己染成想的模樣。<br />那麼，降谷零會是什麼顏色呢？</p>
                          <p><br />/<br /></p>
