--- a/article/dc/akam006.html
+++ b/article/dc/akam006.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -59,6 +59,7 @@
 
 
                          <br />
+                         <p>Fin.</p>
                          <p>2019.4.3.&nbsp;&nbsp;墨兒&infin;</p>
                          <br/><p>-</p><br />
 
