--- a/article/dc/akam003.html
+++ b/article/dc/akam003.html
@@ -46,7 +46,7 @@
                          <p><font size="2" color="#999999"><strong>祝福各位情人節快樂！<a href="./akam005.html">三月十四情人節文「身為共同友人」點我 &larr;</a></strong></font></p>
                          <p><br />/<br /></p>
                          <br />
-                         <img src="./img/特工遊樂園記.png" alt="Image" class="img-fluid">
+                         <img src="./img/akam3.png" alt="Image" class="img-fluid">
                          <br /><br />
                          <p><strong>雲霄飛車</strong></p>
                          <p>&emsp;&emsp;赤井和降谷來到遊樂園，第一站就被降谷拉去玩雲霄飛車。<br />&emsp;&emsp;非常剛好他們倆的位置就在雲霄飛車的第一排，服務員還貼心的問說第一排比較刺激、比較有身歷其境的感受，是不是受的了需要更換位置嗎。想當然立刻被回絕了。<br />&emsp;&emsp;兩個高級特工玩雲霄飛車，自然是全程鎮定也沒有發出任何一點尖叫聲。雲霄飛車停下來後耳朵尖的他們還聽到坐他們後面的女孩子交頭接耳，說太可惜居然沒有捕捉到兩個高冷帥哥的失態尖叫。<br />&emsp;&emsp;等他們安全落地離開車廂時，赤井很認真的說了他的感想：「我總覺得有種坐在你副駕駛座的感覺。」<br />&emsp;&emsp;降谷聽了也很認真的回想：「經你這麼一說我也有這種感覺，難怪一點也不刺激。」<br />&emsp;&emsp;赤井停頓了一下，接著給了個建議：「聽說坐雲霄飛車的時候，把兩隻手舉高會更有刺激的感覺。」<br />&emsp;&emsp;於是他們兩人又回去排隊重新坐一次。<br />&emsp;&emsp;這回非常幸運又讓他們坐到了第一排的特等席。結果當雲霄飛車運轉起來、開始在空中高速飛馳旋轉時，赤井往旁邊瞥了眼降谷，發現他竟然依舊兩隻手穩穩的抓著胸前的保護桿。<br />&emsp;&emsp;「零——不是說要把手放開嗎？」赤井在呼嘯的風中朝降谷喊。<br />&emsp;&emsp;結果降谷回過頭看他，被吹得亂七八糟的瀏海底下眼神異常嚴肅：「混蛋，開車的時候手怎麼可以離開方向盤！」</p>
