--- a/article/dc/akam011.html
+++ b/article/dc/akam011.html
@@ -64,7 +64,7 @@
                          <p>CWT53 2019.12.14-15&nbsp;&nbsp;墨兒&infin;</p>
                          <br /><p>－</p><br />
 
-                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/n75e79">噗浪</a></p>
+                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">匿名心得</a> | <a href="https://www.plurk.com/p/nm8kb9">噗浪碎念</a></p>
 
                          <br/>
                          <a href="../../DC.html" class="btn btn-primary tm-md-align-center">Back to Contents</a>
