--- a/article/dc/akam007.html
+++ b/article/dc/akam007.html
@@ -84,6 +84,8 @@
                          <p>——降谷先生最終秘密篇</p>
                          <p><br /></p>
 
+                         <p>風見裕也看著自己整理出的線索推了推眼鏡，一開始只是一個觀察的嗜好，完全沒有想到會挖掘出這樣的秘密出來。知道降谷先生那樣的男人談起戀愛，對象還是，咳，沒事。雖然震驚，但既然是事實、既然是降谷先生的判斷，那麼鏡片碎了千百回也要祝福。他把自宅案前白板上錯綜複雜的照片、便條、筆記一一拆下，撕碎丟進垃圾桶裡。Case Closed.</p>
+
                          <p>/</p>
 
                          <br />
@@ -112,7 +114,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/1/18 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/1/19 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
