--- a/DC.html
+++ b/DC.html
@@ -61,7 +61,7 @@
                          <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
 -->
                          <br/><br />
-                         <a href="#" class="btn btn-primary tm-md-align-center">Back to Home</a>
+                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
                      </div>
                  </div>
@@ -82,7 +82,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/1/18 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/2/21 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
