--- a/DC.html
+++ b/DC.html
@@ -57,6 +57,11 @@
                          <h5 class="mb-4 tm-text-color-primary">Furuya 降谷中心</h5>
                          <p><a href="./article/dc/furuya001.html">【短詩】原色</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.22</font></p>
 
+                         <br />
+                         <h5 class="mb-4 tm-text-color-primary">Amuro 安室夢女</h5>
+                         <p><a href="./article/dc/amuro001.html">【短文】冰奶茶。三明治。吉他。</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.7</font></p>
+
+
 <!-- 新增目錄備用
                          <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
 -->
