--- a/article/dc/amuro001.html
+++ b/article/dc/amuro001.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -44,34 +44,34 @@
                          <p><font size="2" color="#999999"><strong>改編自名偵探柯南「關係不好的女子樂隊」劇情。</strong></font></p>
                          <p><br/>/<br /></p>
                          
-                         <p>走在初夏的街道，妳右肩上背著剛借來的吉他。雖然還不會彈，但妳有個遠大的夢想，等到學會吉他之後，就要和三五好友組成一個樂團，在舞台上盡情發光發熱。<br />想著想著，妳不自覺走到白羅咖啡廳的門口。陽光正好，玻璃窗裡妳可以看到那位年輕帥氣的金髮服務生。<br />推開店門，妳才剛踏進店裡一步，那清新的嗓音就伴隨玻璃門上風鈴的清脆聲響起：「歡迎光臨！」<br />「好久不見，今天要點什麼？」安室在妳選擇角落一個位置落座後來到妳旁邊。左手拿著菜單，右手拿著筆。他的笑容燦爛，瞇起的眼以及彎起的嘴角，總覺得比起外面那顆太陽更像太陽。</p>
-                         <p>「嗯......」妳一隻手指輕輕撐著下巴思索。「我要一杯冰奶茶，還有安室先生你做的招牌火腿三明治。」</p>
-                         <p>「沒問題。」安室點點頭，耳鬢邊的兩縷金髮隨之晃動了幾下。「還請妳稍等一下喔。」</p>
-                         <p>安室接到妳的點餐後便走回吧檯準備。今天的客人不多，因此安室看起來非常輕鬆。</p>
-                         <p>吧檯裡的他好像在哼著什麼歌曲，把紅茶與牛奶倒進手搖杯裡面，旋緊，然後開始上下搖晃。他的身子側著，看不太到他的表情，但搖晃的手臂韻律穩定，捲起的薄長袖露出一截精壯結實的麥色小臂，蓄含力量卻不張狂的肌肉隨著搖晃的動作收縮。</p>
-                         <p>把奶茶倒入玻璃杯時，妳總覺得可以隔著幾米的距離聞到那股香味。跟安室很搭、很溫暖、很令人安心的味道。</p>
-                         <p>三明治的準備也很快在安室熟練的動作中完成。看著安室俐落的替自己準備餐點，這過程是一件享受。</p>
-                         <p>「來，妳的餐點到囉。」安室挺直著身子把托盤上的飲料與三明治放到妳面前時，妳才從中回過神。</p>
-                         <p>「啊、謝謝......」不知道，安室先生有沒有注意到妳盯著他看了很久？</p>
-                         <p>安室先生依舊掛著那抹迷人的微笑，他的目光移到了妳旁邊的那把吉他。「妳會彈吉他嗎？」</p>
-                         <p>妳聽到安室的話後趕緊坐直身子。「我還不會。但、但是我想要和朋友組一個樂團！」</p>
-                         <p>看見安室驚訝與讚賞的表情後，妳又受到鼓勵而接下去講。「我有一個朋友，她小時候學過一點鋼琴，會負責鍵盤。還有我們有一個主唱！打擊的部分，有位朋友有興趣，雖然她還不會，但我們要一起學。等到我們學會之後，就可以上舞臺表演了。安室先生......如、如果可以的話，到時候請一定要坐在臺下看！」</p>
-                         <p>一股腦說完，覺得臉頰有點熱，但安室先生點點頭：「喔～真不錯，如果可以的話，請一定要讓我......」</p>
-                         <p>「說什麼組樂團？」旁邊桌子坐著的中年男人突然間插話，妳和安室都扭頭過去看那個陌生男人。「就憑你們這點想法，哪裡組的起樂團？想組樂團沒那麼簡單，不會彈吉他、沒有打擊、鍵盤的人也不知道程度如何，根本異想天開，簡直是個笑話！哈哈哈哈哈......」</p>
-                         <p>句末那討人厭的笑聲實在令人感到不舒服，妳感覺到被潑了冷水，很無辜很委屈。妳還沒想好應該怎麼回應，就聽見安室的聲音。「請不要這麼說。」</p>
-                         <p>他的聲音嚴厲，那位陌生男人猖狂的臉也僵硬了一點。「你又是誰？又是一個不會彈吉他要加入他們樂團的人嗎？」</p>
-                         <p>安室似乎有點生氣了，你從沒看過他因為什麼事情而動怒。「妳，吉他借我。」</p>
-                         <p>妳愣了一下，但很快回過神，把吉他拿給安室。安室先生要做什麼？他會彈吉他嗎？沒有必要因為陌生男人嗆了我就這樣做吧？</p>
-                         <p>安室接過吉他，什麼話也沒有說，僅只是俐落的掛上背帶，隨手撥了撥弦調音。接著，他開始彈奏。</p>
-                         <p>那不是什麼特別的曲子，妳沒有聽過，但聽上去像是好很多年前的流行歌曲。</p>
-                         <p>安室的手指靈活的在弦上波動，身子跟隨著旋律微微前傾與後仰，他低垂著頭，看不清臉，金色的瀏海遮擋住半邊的臉，只露出俊俏的鼻梁。</p>
-                         <p>幾個角度變化後，他的眼睛露出瀏海間的縫隙，平日那天藍色的眼睛現在微微閉著，像是沉醉在那首曲子裡。某些音調他彈得特別投入的時候，那對好看的眉毛便會皺起，像座隆起的小山坡。他的嘴巴微微的動著，好像在唸著歌詞，又好像在回憶過去教他曲子的人為他設計的口訣。樂句換氣的時候，安室也跟著呼吸，喉結微微抽動，脖頸的線條也隨著呼吸繃緊與放鬆。</p>
-                         <p>曲子的末段越來越激昂，妳盯著他無法別開目光，渾身散發的氣息那麼吸引人。曲終之時，他瀟灑的掃弦，在空中劃出一道光痕，就像一道耀眼的流星痕跡。</p>
-                         <p>琴弦仍在震動，他撥弦的手停在半空中。妳愣了愣，直到安室再度張開眼睛。他那嚴肅的表情一掃而空，再度換上招牌笑容，對妳做出了一個單眨眼。</p>
-                         <p>妳感覺心跳漏了一拍。</p>
-                         <p>安室把吉他還給妳的時候，妳只能機械性的接過東西，安室再跟旁邊的男人說了什麼話妳也沒有聽進去了。</p>
-                         <p>最後安室好像只是留了一句：「東西趕快吃喔。」便回到工作崗位。妳的目光總算得以拉回到桌上的冰奶茶與三明治，然後再移到工作臺後繼續忙碌的那瀟灑身影。</p>
-                         <p>安室先生，果然還是最好的啊。</p>
+                         <p>&emsp;&emsp;走在初夏的街道，妳右肩上背著剛借來的吉他。雖然還不會彈，但妳有個遠大的夢想，等到學會吉他之後，就要和三五好友組成一個樂團，在舞台上盡情發光發熱。<br />&emsp;&emsp;想著想著，妳不自覺走到白羅咖啡廳的門口。陽光正好，玻璃窗裡妳可以看到那位年輕帥氣的金髮服務生。<br />&emsp;&emsp;推開店門，妳才剛踏進店裡一步，那清新的嗓音就伴隨玻璃門上風鈴的清脆聲響起：「歡迎光臨！」<br />&emsp;&emsp;「好久不見，今天要點什麼？」安室在妳選擇角落一個位置落座後來到妳旁邊。左手拿著菜單，右手拿著筆。他的笑容燦爛，瞇起的眼以及彎起的嘴角，總覺得比起外面那顆太陽更像太陽。</p>
+                         <p>&emsp;&emsp;「嗯......」妳一隻手指輕輕撐著下巴思索。「我要一杯冰奶茶，還有安室先生你做的招牌火腿三明治。」</p>
+                         <p>&emsp;&emsp;「沒問題。」安室點點頭，耳鬢邊的兩縷金髮隨之晃動了幾下。「還請妳稍等一下喔。」</p>
+                         <p>&emsp;&emsp;安室接到妳的點餐後便走回吧檯準備。今天的客人不多，因此安室看起來非常輕鬆。</p>
+                         <p>&emsp;&emsp;吧檯裡的他好像在哼著什麼歌曲，把紅茶與牛奶倒進手搖杯裡面，旋緊，然後開始上下搖晃。他的身子側著，看不太到他的表情，但搖晃的手臂韻律穩定，捲起的薄長袖露出一截精壯結實的麥色小臂，蓄含力量卻不張狂的肌肉隨著搖晃的動作收縮。</p>
+                         <p>&emsp;&emsp;把奶茶倒入玻璃杯時，妳總覺得可以隔著幾米的距離聞到那股香味。跟安室很搭、很溫暖、很令人安心的味道。</p>
+                         <p>&emsp;&emsp;三明治的準備也很快在安室熟練的動作中完成。看著安室俐落的替自己準備餐點，這過程是一件享受。</p>
+                         <p>&emsp;&emsp;「來，妳的餐點到囉。」安室挺直著身子把托盤上的飲料與三明治放到妳面前時，妳才從中回過神。</p>
+                         <p>&emsp;&emsp;「啊、謝謝......」不知道，安室先生有沒有注意到妳盯著他看了很久？</p>
+                         <p>&emsp;&emsp;安室先生依舊掛著那抹迷人的微笑，他的目光移到了妳旁邊的那把吉他。「妳會彈吉他嗎？」</p>
+                         <p>&emsp;&emsp;妳聽到安室的話後趕緊坐直身子。「我還不會。但、但是我想要和朋友組一個樂團！」</p>
+                         <p>&emsp;&emsp;看見安室驚訝與讚賞的表情後，妳又受到鼓勵而接下去講。「我有一個朋友，她小時候學過一點鋼琴，會負責鍵盤。還有我們有一個主唱！打擊的部分，有位朋友有興趣，雖然她還不會，但我們要一起學。等到我們學會之後，就可以上舞臺表演了。安室先生......如、如果可以的話，到時候請一定要坐在臺下看！」</p>
+                         <p>&emsp;&emsp;一股腦說完，覺得臉頰有點熱，但安室先生點點頭：「喔～真不錯，如果可以的話，請一定要讓我......」</p>
+                         <p>&emsp;&emsp;「說什麼組樂團？」旁邊桌子坐著的中年男人突然間插話，妳和安室都扭頭過去看那個陌生男人。「就憑你們這點想法，哪裡組的起樂團？想組樂團沒那麼簡單，不會彈吉他、沒有打擊、鍵盤的人也不知道程度如何，根本異想天開，簡直是個笑話！哈哈哈哈哈......」</p>
+                         <p>&emsp;&emsp;句末那討人厭的笑聲實在令人感到不舒服，妳感覺到被潑了冷水，很無辜很委屈。妳還沒想好應該怎麼回應，就聽見安室的聲音。「請不要這麼說。」</p>
+                         <p>&emsp;&emsp;他的聲音嚴厲，那位陌生男人猖狂的臉也僵硬了一點。「你又是誰？又是一個不會彈吉他要加入他們樂團的人嗎？」</p>
+                         <p>&emsp;&emsp;安室似乎有點生氣了，你從沒看過他因為什麼事情而動怒。「妳，吉他借我。」</p>
+                         <p>&emsp;&emsp;妳愣了一下，但很快回過神，把吉他拿給安室。安室先生要做什麼？他會彈吉他嗎？沒有必要因為陌生男人嗆了我就這樣做吧？</p>
+                         <p>&emsp;&emsp;安室接過吉他，什麼話也沒有說，僅只是俐落的掛上背帶，隨手撥了撥弦調音。接著，他開始彈奏。</p>
+                         <p>&emsp;&emsp;那不是什麼特別的曲子，妳沒有聽過，但聽上去像是好很多年前的流行歌曲。</p>
+                         <p>&emsp;&emsp;安室的手指靈活的在弦上波動，身子跟隨著旋律微微前傾與後仰，他低垂著頭，看不清臉，金色的瀏海遮擋住半邊的臉，只露出俊俏的鼻梁。</p>
+                         <p>&emsp;&emsp;幾個角度變化後，他的眼睛露出瀏海間的縫隙，平日那天藍色的眼睛現在微微閉著，像是沉醉在那首曲子裡。某些音調他彈得特別投入的時候，那對好看的眉毛便會皺起，像座隆起的小山坡。他的嘴巴微微的動著，好像在唸著歌詞，又好像在回憶過去教他曲子的人為他設計的口訣。樂句換氣的時候，安室也跟著呼吸，喉結微微抽動，脖頸的線條也隨著呼吸繃緊與放鬆。</p>
+                         <p>&emsp;&emsp;曲子的末段越來越激昂，妳盯著他無法別開目光，渾身散發的氣息那麼吸引人。曲終之時，他瀟灑的掃弦，在空中劃出一道光痕，就像一道耀眼的流星痕跡。</p>
+                         <p>&emsp;&emsp;琴弦仍在震動，他撥弦的手停在半空中。妳愣了愣，直到安室再度張開眼睛。他那嚴肅的表情一掃而空，再度換上招牌笑容，對妳做出了一個單眨眼。</p>
+                         <p>&emsp;&emsp;妳感覺心跳漏了一拍。</p>
+                         <p>&emsp;&emsp;安室把吉他還給妳的時候，妳只能機械性的接過東西，安室再跟旁邊的男人說了什麼話妳也沒有聽進去了。</p>
+                         <p>&emsp;&emsp;最後安室好像只是留了一句：「東西趕快吃喔。」便回到工作崗位。妳的目光總算得以拉回到桌上的冰奶茶與三明治，然後再移到工作臺後繼續忙碌的那瀟灑身影。</p>
+                         <p>&emsp;&emsp;安室先生，果然還是最好的啊。</p>
 
 
                          <br />
