--- a/DC.html
+++ b/DC.html
@@ -41,6 +41,7 @@
                          <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
                          <br/>
                          <h5 class="mb-4 tm-text-color-primary">AKAM 赤安</h5>
+                         <p><a href="./article/collection2019.html">【整理】2019噗浪隨筆整理</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.28</font></p>
                          <p><a href="./article/dc/akam011.html">【短文】CWT53無料公開</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.13</font></p>
                          <p><a href="./article/dc/akam010.html">【極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
                          <p><a href="./article/dc/akam009.html">【極短】上邪</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.9.2</font></p>
