--- a/article/collection2019.html
+++ b/article/collection2019.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>待墨濃時 - 2019噗浪隨筆整理</title>
-    <link rel="icon" href="../../img/icon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/icon.ico" type="image/x-icon">
 
   <!-- load CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
-  <link rel="stylesheet" href="../../css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
-  <link rel="stylesheet" href="../../css/templatemo-style.css">                                     <!-- Templatemo style -->
+  <link rel="stylesheet" href="../css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
+  <link rel="stylesheet" href="../css/templatemo-style.css">                                     <!-- Templatemo style -->
 
   <script>
     var renderPage = true;
@@ -138,7 +138,7 @@
          </div>
 </div>
 <!-- load JS -->
-<script src="../../js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
+<script src="../js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
 <script>
 
   /* DOM is ready
