--- a/DC.html
+++ b/DC.html
@@ -40,7 +40,8 @@
                      <div class="tm-md-flex-center">
                          <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
                          <br/>
-                         <h5 class="mb-4 tm-text-color-primary">AKAM 赤安</h5>
+                         <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
+                         <p><a href="./article/dc/akam012-r18.html">【短文】情人節賀文2020（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.2.14</font></p>
                          <p><a href="./article/collection2019.html">【整理】2019噗浪隨筆整理</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.28</font></p>
                          <p><a href="./article/dc/akam011.html">【短文】CWT53無料公開</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.13</font></p>
                          <p><a href="./article/dc/akam010.html">【極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
@@ -55,11 +56,11 @@
                          <p><a href="./article/dc/akam001.html">【極短】男朋友</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.11.11</font></p>
 
                          <br />
-                         <h5 class="mb-4 tm-text-color-primary">Furuya 降谷中心</h5>
+                         <h5 class="mb-4 tm-text-color-primary">▍ Furuya 降谷中心</h5>
                          <p><a href="./article/dc/furuya001.html">【短詩】原色</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.22</font></p>
 
                          <br />
-                         <h5 class="mb-4 tm-text-color-primary">Amuro 安室夢女</h5>
+                         <h5 class="mb-4 tm-text-color-primary">▍ Amuro 安室夢女</h5>
                          <p><a href="./article/dc/amuro001.html">【短文】冰奶茶。三明治。吉他。</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.7</font></p>
 
 
@@ -88,7 +89,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/2/21 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/2/22 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
