--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="赤安,秀零" />
+  <meta name="keywords" content="赤安,秀零,AKAM" />
 
   <title>待墨濃時 - Derivative Profile</title>
   <link rel="icon" href="./img/icon.ico" type="image/x-icon">
