--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          <!-- 5th Section #5B616A -->
          <section class="row tm-section tm-mb-30">
              <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0">
-                 <img src="img/image-05.jpg" alt="Image" class="img-fluid">
+                 <a href="./Anime.html"><img src="img/image-05-2.jpg" alt="Image" class="img-fluid" ></a>
              </div>
              <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 pl-lg-4 pr-xl-0 mb-4 mb-lg-0">
                  <div class="tm-flex-center">
@@ -127,7 +127,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/2/28 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/5/4 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
