--- a/DC.html
+++ b/DC.html
@@ -41,6 +41,7 @@
                          <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
                          <br/>
                          <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
+                         <p><a href="./article/dc/akam013-r18.html">【短文】床邊的康乃馨（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.5.28</font></p>
                          <p><a href="./article/dc/akam012-r18.html">【短文】情人節賀文2020（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.2.14</font></p>
                          <p><a href="./article/collection2019.html">【整理】2019噗浪隨筆整理</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.28</font></p>
                          <p><a href="./article/dc/akam011.html">【短文】CWT53無料公開</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.13</font></p>
@@ -89,7 +90,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/2/22 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/5/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
