--- a/article/dc/akam013.html
+++ b/article/dc/akam013.html
@@ -43,7 +43,7 @@
                          <p>赤安短篇（赤井秀一 x 降谷零）</p>
                          <p><font size="2" color="#999999"><strong>R18，未滿成年請勿閱覽。</strong></font></p>
                          <p><font size="2" color="#999999"><strong>約4100字，秀零期，戰損注意。</strong></font></p>
-                         <p><font size="2" color="#999999"><strong>若又不當知識切勿學習、若有與現實狀況不相符之描述也請自動忽略。</strong></font></p>
+                         <p><font size="2" color="#999999"><strong>若有不當知識切勿學習、若有與現實狀況不相符之描述也請自動忽略。</strong></font></p>
 
                          <p><br />/<br /></p>
                          <img src="./img/Carnation.png" alt="Image" class="img-fluid">
