--- a/article/dc/akam013.html
+++ b/article/dc/akam013.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -74,7 +74,7 @@
                          <br /><p>－</p><br />
 
 
-                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/star_fall22">噗浪</a></p>
+                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/nuekft">噗浪</a></p>
 
                          <br/>
                          <a href="../../DC.html" class="btn btn-primary tm-md-align-center">Back to Contents</a>
