--- a/APEX.html
+++ b/APEX.html
@@ -38,15 +38,16 @@
                  <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
                      <div class="tm-md-flex-center">
                          <h2 class="mb-4 tm-text-color-primary"><strong>APEX Legends｜APEX英雄</strong></h2>
-                         <br/>
-                         <h5 class="mb-4 tm-text-color-primary">Darksparks 惡靈華森 レイワト</h5>
-                         <p><a href="./article/apex/darksparks001.html">【極短】Come Back to Me</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.6.11</font></p>
+                         <br />
+                         <h5 class="mb-4 tm-text-color-primary">▍ Darksparks 惡靈華森</h5>
+                         <p><a href="./article/apex/darksparks003.html">【短篇】… the best is yet to be.</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.11.21</font></p>
                          <p><a href="./article/apex/darksparks002.html">【短篇】Gun Charm with You</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.7.26</font></p>
+                         <p><a href="./article/apex/darksparks001.html">【極短】Come Back to Me</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.6.11</font></p>
 
-<!-- 新增目錄備用
-                         <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
--->
-                         <br/><br />
+                         <!-- 新增目錄備用
+                             <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
+    -->
+                         <br /><br />
                          <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
                      </div>
@@ -68,7 +69,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/7/28 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/11/21 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
