--- a/APEX.html
+++ b/APEX.html
@@ -40,7 +40,7 @@
                          <h2 class="mb-4 tm-text-color-primary"><strong>APEX Legends｜APEX英雄</strong></h2>
                          <br />
                          <h5 class="mb-4 tm-text-color-primary">▍ Darksparks 惡靈華森</h5>
-                         <p><a href="./article/apex/darksparks003.html">【短篇】… the best is yet to be.</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.11.21</font></p>
+                         <p><a href="https://bit.ly/336pX8n">【短篇】… the best is yet to be.</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.11.21</font></p>
                          <p><a href="./article/apex/darksparks002.html">【短篇】Gun Charm with You</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.7.26</font></p>
                          <p><a href="./article/apex/darksparks001.html">【極短】Come Back to Me</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.6.11</font></p>
 
