--- a/article/apex/darksparks004.html
+++ b/article/apex/darksparks004.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>待墨濃時 - Deer Renee</title>
+  <title>待墨濃時 - Dear Renee</title>
     <link rel="icon" href="../../img/icon.ico" type="image/x-icon">
 
   <!-- load CSS -->
