--- a/article/dc/akam011.html
+++ b/article/dc/akam011.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -61,10 +61,10 @@
 
                          <br /><br />
                          <p>Fin.</p>
-                         <p>CWT53 2019.12.14-15&nbsp;&nbsp;墨兒&infin;</p>
+                         <p>CWT53 2019.12.12-13&nbsp;&nbsp;墨兒&infin;</p>
                          <br /><p>－</p><br />
 
-                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">匿名心得</a> | <a href="https://www.plurk.com/p/nm8kb9">噗浪碎念</a></p>
+                         <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/n75e79">噗浪</a></p>
 
                          <br/>
                          <a href="../../DC.html" class="btn btn-primary tm-md-align-center">Back to Contents</a>
@@ -85,7 +85,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2019/12/20 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2021/2/6 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
