--- a/article/dc/akam011.html
+++ b/article/dc/akam011.html
@@ -61,7 +61,7 @@
 
                          <br /><br />
                          <p>Fin.</p>
-                         <p>CWT53 2019.12.12-13&nbsp;&nbsp;墨兒&infin;</p>
+                         <p>CWT53 2019.12.14&nbsp;&nbsp;墨兒&infin;</p>
                          <br /><p>－</p><br />
 
                          <p>Links： <a href="https://forms.gle/RPq17dtsuf6qe1CD7">心得</a> | <a href="https://www.plurk.com/p/n75e79">噗浪</a></p>
