--- a/DC.html
+++ b/DC.html
@@ -39,8 +39,9 @@
                  <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
                      <div class="tm-md-flex-center">
                          <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
-                         <br/>
+                         <br />
                          <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
+                         <p><a href="http://bit.ly/39R1KqC">【短文】初雪（CWT56無料公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
                          <p><a href="https://bit.ly/3ldV89f">【極短】七夕</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.8.25</font></p>
                          <p><a href="https://bit.ly/2ZFURDV">【短文】床邊的康乃馨（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.5.27</font></p>
                          <p><a href="./article/dc/akam012-r18.html">【短文】情人節賀文2020（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.2.14</font></p>
@@ -66,10 +67,10 @@
                          <p><a href="./article/dc/amuro001.html">【短文】冰奶茶。三明治。吉他。</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.7</font></p>
 
 
-<!-- 新增目錄備用
-                         <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
--->
-                         <br/><br />
+                         <!-- 新增目錄備用
+                             <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
+    -->
+                         <br /><br />
                          <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                          <p>&nbsp;</p>
                      </div>
@@ -91,7 +92,7 @@
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2020/8/25 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2021/2/6 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
