--- a/index.html
+++ b/index.html
@@ -32,106 +32,126 @@
     <div class="loader-section section-right"></div>
   </div>
 
- <div class="container">
+  <div class="container">
 
-  <!-- 1st section -->
-  <section class="row tm-section">
-   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
-    <div class="tm-flex-center p-5 tm-bg-color-primary tm-section-min-h">
-      <h1 class="tm-text-color-white tm-site-name">Derivative</h1>
-        <p><font color="white"><br />同人作品</font></p>
-    </div>
+      <!-- 1st section -->
+      <section class="row tm-section">
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+              <div class="tm-flex-center p-5 tm-bg-color-primary tm-section-min-h">
+                  <h1 class="tm-text-color-white tm-site-name">Derivative</h1>
+                  <p><font color="white"><br />同人作品</font></p>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="tm-flex-center p-5">
+                  <img src="img/head.png" alt="Image" class="rounded-circle mb-4">
+                  <p>&nbsp;&nbsp;&nbsp; <strong><font size="5">墨兒</font></strong><br />&nbsp;&nbsp;&nbsp;&nbsp;待墨濃時</p>
+              </div>
+          </div>
+      </section>
+
+      <!-- 2nd section -->
+      <!--名偵探柯南-->
+      <section class="row tm-section tm-col-md-reverse">
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="tm-flex-center p-5">
+                  <div class="tm-md-flex-center">
+                      <h2 class="tm-text-color-primary mb-4"><strong>DC｜名偵探柯南</strong></h2>
+                      <p class="mb-4"><strong>赤安｜</strong>赤井秀一 x 安室透（降谷零）</p>
+                      <a href="./DC.html" class="btn btn-primary tm-md-align-center">Read more</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+              <div class="tm-flex-center p-5 tm-bg-color-primary">
+                  <div class="tm-max-w-400 tm-flex-center tm-flex-col">
+                      <p class="tm-text-color-white small tm-font-thin mb-0">降谷零認為，赤井秀一的雙眼裡海涵了整片銀河。<br />而赤井秀一認為，百萬星辰都比不上降谷零的眼。<br /><br /><i>Pour qui un million d'étoiles, ne valent pas les yeux de celle qu'il aime.（百萬星辰，都比不上情人的眼。）<br />——取自法文音樂劇《鐘樓怪人》</i></p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!--惡靈華森-->
+      <section class="row tm-section tm-col-md-reverse">
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+              <div class="tm-flex-center p-5 tm-bg-color-primary">
+                  <div class="tm-max-w-400 tm-flex-center tm-flex-col">
+                      <p class="tm-text-color-white small tm-font-thin mb-0">請一直待在有我的時空裡，好嗎？</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+              <div class="tm-flex-center p-5">
+                  <div class="tm-md-flex-center">
+                      <h2 class="tm-text-color-primary mb-4"><strong>APEX Legends｜APEX英雄</strong></h2>
+                      <p class="mb-4"><strong>Darksparks｜</strong>惡靈 x 華森</p>
+                      <a href="./APEX.html" class="btn btn-primary tm-md-align-center">Read more</a>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+
+      <!-- 5th Section #5B616A -->
+      <section class="row tm-section tm-mb-30">
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0">
+              <a href="./Tools.html"><img src="img/image-05-2.PNG" alt="Image" class="img-fluid"></a>
+
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 pl-lg-4 pr-xl-0 mb-4 mb-lg-0">
+              <div class="tm-flex-center">
+                  <div class="tm-pricing-table">
+                      <div class="tm-bg-color-secondary tm-text-color-white text-center tm-font-thin tm-pricing-header">
+                          <p class="mb-0 tm-pricing-header-title">匿名心得</p>
+                          <p class="mb-0 tm-pricing-header-subtitle"> </p>
+                      </div>
+                      <div class="tm-pricing-body">
+                          <ul class="tm-feature-list">
+                              <li>感謝大家願意閱讀我的文章，如果有任何心得、建議、指教，歡迎在這裡告訴我，我會認真看所有的回饋的，謝謝大家 ( 鞠躬 )！</li>
+                              <li> </li>
+                              <li>內有許願池 ( ？ )</li>
+                          </ul>
+                          <a href="https://forms.gle/RPq17dtsuf6qe1CD7" class="btn btn-secondary">　點　此　進　入　</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 pl-xl-0 mb-4 mb-lg-0">
+              <div class="tm-flex-center">
+                  <div class="tm-pricing-table">
+                      <div class="tm-bg-color-secondary tm-text-color-white text-center tm-font-thin tm-pricing-header">
+                          <p class="mb-0 tm-pricing-header-title">聯絡與資訊</p>
+                          <p class="mb-0 tm-pricing-header-subtitle"> </p>
+                      </div>
+                      <div class="tm-pricing-body">
+                          <ul class="tm-feature-list">
+                              <li><strong>Plurk｜</strong><a href="https://www.plurk.com/star_fall22">@star_fall22</a></li>
+                              <li><strong>Pixnet｜</strong><a href="http://star22fall22.pixnet.net/blog/post/233633627-%E6%96%87%E7%AB%A0%E7%9B%AE%E9%8C%84">墨未濃（舊站）</a></li>
+                              <li><strong>Doujin｜</strong><a href="https://www.doujin.com.tw/authors/info/star_fall22">墨兒</a></li>
+                              <li><strong>Email｜</strong><a href="mailto:star22fall22@gmail.com?subject=寫信給墨兒&body=墨兒墨兒，我想對你說......">star22fall22@gmail.com</a></li>
+                              <li>&nbsp;</li>
+                              <li>&nbsp;</li>
+                          </ul>
+
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- 6th Section -->
+      <section class="row">
+          <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
+          </div>
+      </section>
+
+      <!-- Footer -->
+      <div class="row">
+          <div class="col-lg-12">
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2021/10/4 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+          </div>
+      </div>
   </div>
-  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-    <div class="tm-flex-center p-5">
-        <img src="img/head.png" alt="Image" class="rounded-circle mb-4">
-      <p>&nbsp;&nbsp;&nbsp; <strong><font size="5">墨兒</font></strong><br />&nbsp;&nbsp;&nbsp;&nbsp;待墨濃時</p>
-    </div>
-  </div>
-</section>
-
-<!-- 2nd section -->
-     <!--名偵探柯南-->
-<section class="row tm-section tm-col-md-reverse">
- <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-  <div class="tm-flex-center p-5">
-    <div class="tm-md-flex-center">
-      <h2 class="tm-text-color-primary mb-4"><strong>DC｜名偵探柯南</strong></h2>
-      <p class="mb-4"><strong>赤安｜</strong>赤井秀一 x 安室透（降谷零）</p>
-        <a href="./DC.html" class="btn btn-primary tm-md-align-center">Read more</a>
-    </div>
-  </div>
-</div>
-<div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
-  <div class="tm-flex-center p-5 tm-bg-color-primary">
-    <div class="tm-max-w-400 tm-flex-center tm-flex-col">
-      <p class="tm-text-color-white small tm-font-thin mb-0">降谷零認為，赤井秀一的雙眼裡海涵了整片銀河。<br/>而赤井秀一認為，百萬星辰都比不上降谷零的眼。<br /><br /><i>Pour qui un million d'étoiles, ne valent pas les yeux de celle qu'il aime.（百萬星辰，都比不上情人的眼。）<br />——取自法文音樂劇《鐘樓怪人》</i></p>
-    </div>
-  </div>
-</div>
-</section>
-
-  
-         <!-- 5th Section #5B616A -->
-         <section class="row tm-section tm-mb-30">
-             <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 p-md-0 text-md-center text-center mb-4 mb-lg-0">
-                 <a href="./Tools.html"><img src="img/image-05-2.PNG" alt="Image" class="img-fluid" ></a>
-                 
-             </div>
-             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 pl-lg-4 pr-xl-0 mb-4 mb-lg-0">
-                 <div class="tm-flex-center">
-                     <div class="tm-pricing-table">
-                         <div class="tm-bg-color-secondary tm-text-color-white text-center tm-font-thin tm-pricing-header">
-                             <p class="mb-0 tm-pricing-header-title">匿名心得</p>
-                             <p class="mb-0 tm-pricing-header-subtitle"> </p>
-                         </div>
-                         <div class="tm-pricing-body">
-                             <ul class="tm-feature-list">
-                                 <li>感謝大家願意閱讀我的文章，如果有任何心得、建議、指教，歡迎在這裡告訴我，我會認真看所有的回饋的，謝謝大家 ( 鞠躬 )！</li>
-                                 <li> </li>
-                                 <li>內有許願池 ( ？ )</li>
-                             </ul>
-                             <a href="https://forms.gle/RPq17dtsuf6qe1CD7" class="btn btn-secondary">　點　此　進　入　</a>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-             <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 pl-xl-0 mb-4 mb-lg-0">
-                 <div class="tm-flex-center">
-                     <div class="tm-pricing-table">
-                         <div class="tm-bg-color-secondary tm-text-color-white text-center tm-font-thin tm-pricing-header">
-                             <p class="mb-0 tm-pricing-header-title">聯絡與資訊</p>
-                             <p class="mb-0 tm-pricing-header-subtitle"> </p>
-                         </div>
-                         <div class="tm-pricing-body">
-                             <ul class="tm-feature-list">
-                                 <li><strong>Plurk｜</strong><a href="https://www.plurk.com/star_fall22">@star_fall22</a></li>
-                                 <li><strong>Pixnet｜</strong><a href="http://star22fall22.pixnet.net/blog/post/233633627-%E6%96%87%E7%AB%A0%E7%9B%AE%E9%8C%84">墨未濃（舊站）</a></li>
-                                 <li><strong>Doujin｜</strong><a href="https://www.doujin.com.tw/authors/info/star_fall22">墨兒</a></li>
-                                 <li><strong>Email｜</strong><a href="mailto:star22fall22@gmail.com?subject=寫信給墨兒&body=墨兒墨兒，我想對你說......">star22fall22@gmail.com</a></li>
-                                 <li>&nbsp;</li>
-                                 <li>&nbsp;</li>
-                             </ul>
-                             
-                         </div>
-                     </div>
-                 </div>
-             </div>
-         </section>
-
-         <!-- 6th Section -->
-         <section class="row">
-             <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
-             </div>
-         </section>
-
-         <!-- Footer -->
-         <div class="row">
-             <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2021/10/3 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
-             </div>
-         </div>
-</div>
 <!-- load JS -->
 <script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
 <script>
